--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 							<header>
 								<h1>AI generated Artwork as NFT on the <a href="https://cardano.org/">Cardano</a> Blockchain.</h1>
 								<p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. <br> Our very first drop is now available at <a href="https://CNFT.io/">CNFT.io</a>.</p>
-                                		</header>
+							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/Blue octopus.jpg" alt="" />
 									</span>
-									<a href="policies.html">
+									<a>
 										<h2>Octopus</h2>
 										<div class="content">
 											<p>Status: Giveaway, done</p>
@@ -68,7 +68,7 @@
 									<span class="image">
 										<img src="images/Flipped blue scarab.jpg" alt="" />
 									</span>
-									<a href="policies.html">
+									<a>
 										<h2>Flipped Blue Scarab</h2>
 										<div class="content">
 											<p>Status: Sold</p>
@@ -79,10 +79,10 @@
 									<span class="image">
 										<img src="images/A Breath of Blue.jpg" alt="" />
 									</span>
-									<a href="policies.html">
+									<a>
 										<h2>A Breath Of Blue</h2>
 										<div class="content">
-											<p>Status: Giveaway, live now on Twitter</p>
+											<p>Status: Giveaway</p>
 										</div>
 									</a>
 								</article>
@@ -90,10 +90,10 @@
 									<span class="image">
 										<img src="images/Taking a shower.jpg" alt="" />
 									</span>
-									<a href="policies.html">
+									<a>
 										<h2>Taking A Shower</h2>
 										<div class="content">
-											<p>Status: Giveaway, live now on Twitter</p>
+											<p>Status: Giveaway</p>
 										</div>
 									</a>
 								</article>
@@ -101,7 +101,7 @@
 									<span class="image">
 										<img src="images/All ways lead to rome.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=Pl63dFo3yyYPaULke4Dh">
+									<a>
 										<h2>All Roads Lead To Rome</h2>
 										<div class="content">
 											<p>Status: Sold</p>
@@ -112,7 +112,7 @@
 									<span class="image">
 										<img src="images/Stairs.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=cy4MUCLXLSuhntqJx4HT">
+									<a>
 										<h2>Stairs</h2>
 										<div class="content">
 											<p>Status: Sold</p>
@@ -123,7 +123,7 @@
 									<span class="image">
 										<img src="images/Blue Blob.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=jyouPZec2RAPNxDAbMKj">
+									<a href="https://cnft.io/token.php?id=QoyfbM52eKCSyG2R3R4a">
 										<h2>Blue Blob</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -134,7 +134,7 @@
 									<span class="image">
 										<img src="images/Dog with glasses.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=AdBYHYYfP8BJHp8vckw2">
+									<a href="https://cnft.io/token.php?id=N7kESgieKY7SGUYx01Qr">
 										<h2>Dog With Glasses</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -145,7 +145,7 @@
 									<span class="image">
 										<img src="images/Broken Doors.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=01fpmNDmpbIJizm9e9RW">
+									<a href="https://cnft.io/token.php?id=8msmfVStbnokVQh8znRE">
 										<h2>Broken Doors</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -156,7 +156,7 @@
 									<span class="image">
 										<img src="images/Cancerous brownie.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=2skl49ure1hxFcjF5JI3">
+									<a href="https://cnft.io/token.php?id=v6JXdrvJPq7lAKPmQphb">
 										<h2>Cancerous Brownie</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -167,7 +167,7 @@
 									<span class="image">
 										<img src="images/Cracks in the wall.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=Go20il62UfNHLiKd1qC0">
+									<a href="https://cnft.io/token.php?id=Z7NuztzQcYdU28P18Rh2">
 										<h2>Cracks In The Wall</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -178,7 +178,7 @@
 									<span class="image">
 										<img src="images/cubed orange.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=qMcni3SbIYv797cXaO8H">
+									<a href="https://cnft.io/token.php?id=SlJHWm35fAC73b1dcAXU">
 										<h2>Cubed Orange</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -189,7 +189,7 @@
 									<span class="image">
 										<img src="images/Desert.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=NzxWEqhJTpeKjNb5w6Or">
+									<a href="https://cnft.io/token.php?id=M7x6HC192dqcBRYIydVx">
 										<h2>Desert</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -200,7 +200,7 @@
 									<span class="image">
 										<img src="images/Jellyfish.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=BcRQ183s0JUtkdUIDXLm">
+									<a href="https://cnft.io/token.php?id=pfwB03bMd6gPnWFOGeEF">
 										<h2>Jellyfish</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -211,7 +211,7 @@
 									<span class="image">
 										<img src="images/Evolution of Avocado.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=T65Q2Hi4feHAdyrW1B7e">
+									<a href="https://cnft.io/token.php?id=uu9DaOLRKe1nMjGd0Baw">
 										<h2>Evolution Of An Avocado</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -222,7 +222,7 @@
 									<span class="image">
 										<img src="images/Granite.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=rz2dgq3LazN5b8EBcBDn">
+									<a href="https://cnft.io/token.php?id=hKCvHGUsdLZhIaqiBDNX">
 										<h2>Granite</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -233,10 +233,10 @@
 									<span class="image">
 										<img src="images/Lightray.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=rBTs3trNeUY9lHQYkYUC">
+									<a>
 										<h2>Lightray</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -244,7 +244,7 @@
 									<span class="image">
 										<img src="images/Teachers bag.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=zg3TdYbeplizzUNCoZFg">
+									<a href="https://cnft.io/token.php?id=94MEvarBKwvpCwmqO4zY">
 										<h2>Teacher Bag</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -255,7 +255,7 @@
 									<span class="image">
 										<img src="images/Menstruation.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=PQQE1ZJBPEj9Ceb67J5W">
+									<a href="https://cnft.io/token.php?id=lnU675il29QGTjAyzDKg">
 										<h2>Menstruation</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -266,7 +266,7 @@
 									<span class="image">
 										<img src="images/Mountain tops.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=diAcxyOlRTTRioKVUTTs">
+									<a href="https://cnft.io/token.php?id=37sYJucm8aeftwNXQjAj">
 										<h2>Mountain Tops</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -277,7 +277,7 @@
 									<span class="image">
 										<img src="images/Nothing to see here.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=Kd0DwJIcyRoIAF70yiV0">
+									<a href="https://cnft.io/token.php?id=RVAcMmt3mdZi4o78jETA">
 										<h2>Nothing To See Here</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -288,7 +288,7 @@
 									<span class="image">
 										<img src="images/Nuggets.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=nwZdqmSlUv7Eu4obkuzm">
+									<a href="https://cnft.io/token.php?id=UJyk0Zv7dSIjLwUM963s">
 										<h2>Nuggets</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -299,7 +299,7 @@
 									<span class="image">
 										<img src="images/Pear on Shelf.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=zCqbV9EVW1rdyjoxG4PB">
+									<a href="https://cnft.io/token.php?id=x4GQu52iNVDSGL6CfkTF">
 										<h2>Pear On Shelf</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -310,7 +310,7 @@
 									<span class="image">
 										<img src="images/Orange Windows.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=rSZkxq97WjZ52hd2t1Rp">
+									<a href="https://cnft.io/token.php?id=gvC9OBTlaRqvBDoy1Kid">
 										<h2>Orange Windows</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -321,7 +321,7 @@
 									<span class="image">
 										<img src="images/Pool.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=EuUTMiDfUuyBjf5YXszW">
+									<a href="https://cnft.io/token.php?id=LH2ilmSGQKM06GAGoxCT">
 										<h2>Pool</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -332,7 +332,7 @@
 									<span class="image">
 										<img src="images/Red Eyes.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=XsDXcvQoWneJiO72Ebl3">
+									<a href="https://cnft.io/token.php?id=rFA5Cf9J4Zy2c4DJS6vG">
 										<h2>Red Eyes</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -343,7 +343,7 @@
 									<span class="image">
 										<img src="images/Rainbow in the snow.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=uO9E9AwDp5TWOyu2kjkf">
+									<a>
 										<h2>Snowy Rainbow</h2>
 										<div class="content">
 											<p>Status: Sold</p>
@@ -354,7 +354,7 @@
 									<span class="image">
 										<img src="images/Stripes no stars.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=KJ6e9DVKJpjy1uR0R6g6">
+									<a href="https://cnft.io/token.php?id=jHYqO8ZvuInyQfDW9yIr">
 										<h2>Stripes, No Stars</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -365,7 +365,7 @@
 									<span class="image">
 										<img src="images/Red Egg.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=vgVxidgPJUmWIaAGPUN4">
+									<a href="https://cnft.io/token.php?id=ffBPAxRh9V5pCTSiLRVh">
 										<h2>Red Egg</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -376,7 +376,7 @@
 									<span class="image">
 										<img src="images/Stacked Pots.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=9jEWPbUBQdrF2B2hDjsE">
+									<a href="https://cnft.io/token.php?id=Pkx0HwDFg9hNIPjRyoQO">
 										<h2>Stacked Pots</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -387,7 +387,7 @@
 									<span class="image">
 										<img src="images/Rose foam.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=gYFgewFIV4DoAXL90oEl">
+									<a href="https://cnft.io/token.php?id=fcQL24BxvHYpDU9DJsda">
 										<h2>Rosé Foam</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
@@ -398,10 +398,10 @@
 									<span class="image">
 										<img src="images/Swimming in the lake.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=IJfa4TPl35LzX9slqHZP">
+									<a>
 										<h2>Swimming In The Lake</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -409,7 +409,7 @@
 									<span class="image">
 										<img src="images/Waves.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=CIeVY1ucQUjPOc5i0i0o">
+									<a>
 										<h2>Waves</h2>
 										<div class="content">
 											<p>Status: Sold</p>
@@ -420,8 +420,19 @@
 									<span class="image">
 										<img src="images/Writing a letter.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=BP62FGINLYSNEvKEDDUz">
+									<a href="https://cnft.io/token.php?id=cL1bF3SqIZFzRiLlkQtl">
 										<h2>Writing A Letter</h2>
+										<div class="content">
+											<p>Status: available on CNFT.io</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style5">
+									<span class="image">
+										<img src="images/Trees in the water.jpg" alt="" />
+									</span>
+									<a href="https://cnft.io/token.php?id=jH1JQVh9PgHpxEbBRCYs">
+										<h2>Stacked Pots</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
 										</div>
@@ -450,8 +461,8 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-                                <li><a href="https://twitter.com/ArtGallery_AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+                                <li><a href="https://twitter.com/ArtGallery__AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                                <li><a href="https://discord.gg/tUkU6dXs3d" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
                                 <li><a href="https://t.me/ArtGallery_AI" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
 								</ul>
 							</section>
