--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
                             <h2>How many NFTs are available</h2>
                             <p>Batch #1 has 50 unique NFTs: <br>
-Common: Minted 35 times | 27 available <br>
+Common: Minted 35 times | 25 available <br>
 Rare: Minted ? times <br>
 Epic: Minted ? times</p>
 
@@ -84,8 +84,8 @@ Epic: Minted ? times</p>
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-                                <li><a href="https://twitter.com/ArtGallery_AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                                <li><a href="https://discord.gg/QKc8SrpT" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+                                <li><a href="https://twitter.com/ArtGallery__AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                                <li><a href="https://discord.gg/tUkU6dXs3d" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
                                 <li><a href="https://t.me/ArtGallery_AI" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
 								</ul>
 							</section>
