--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 										<img src="images/Trees in the water.jpg" alt="" />
 									</span>
 									<a href="https://cnft.io/token.php?id=jH1JQVh9PgHpxEbBRCYs">
-										<h2>Stacked Pots</h2>
+										<h2>Trees In The Water</h2>
 										<div class="content">
 											<p>Status: available on CNFT.io</p>
 										</div>
