--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 									<span class="image">
 										<img src="images/Dog with glasses.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=N7kESgieKY7SGUYx01Qr">
+									<a>
 										<h2>Dog With Glasses</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -200,10 +200,10 @@
 									<span class="image">
 										<img src="images/Jellyfish.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=pfwB03bMd6gPnWFOGeEF">
+									<a>
 										<h2>Jellyfish</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
