--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
 									<span class="image">
 										<img src="images/Menstruation.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=lnU675il29QGTjAyzDKg">
+									<a>
 										<h2>Menstruation</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -431,10 +431,10 @@
 									<span class="image">
 										<img src="images/Trees in the water.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=jH1JQVh9PgHpxEbBRCYs">
+									<a>
 										<h2>Trees In The Water</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
