--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 							<h2>About ArtGallery_AI</h2>
                             <p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
                             <h2>What are GANs?</h2>
-                            <p>GANs or Generative Adversarial Networks were introduced by Ian Goodfellow et. al. in a 2014 paper. GANs address the lack of relative success of deep generative models compared to deep discriminative models. The authors cite the intractability of maximum likelihood estimation, which is necessary for most generative models, as the reason for this discrepancy. GANs are therefore set up to take advantage of the power of deep discriminative models to circumvent the need for maximum likelihood estimation and thus avoid the main flaws of traditional generative models. This is done by using a generative model and a discriminative model that compete with each other to train the generator. </p>
+                            <p>GANs are a class of machine learning frameworks designed by Ian Goodfellow and his colleagues in 2014. Two neural networks contest with each other in a game (in the form of a zero-sum game, where one agent's gain is another agent's loss). Given a training set, this technique learns to generate new data with the same statistics as the training set. For example, a GAN trained on abstract art can generate new paintings of abstract art that look at least superficially authentic to human observers, having many realistic characteristics. </p>
 
                             <h2>How many NFTs are available</h2>
                             <p>Batch #1 has 50 unique NFTs: <br>
