--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ Epic: Minted ? times</p>
 								<h2>Follow</h2>
 								<ul class="icons">
                                 <li><a href="https://twitter.com/ArtGallery__AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                                <li><a href="https://discord.gg/tUkU6dXs3d" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+                                <li><a href="https://discord.gg/xzmYbpQetc" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
                                 <li><a href="https://t.me/ArtGallery_AI" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
 								</ul>
 							</section>
