--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="policies.html">Policies</a></li>
-                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Now</a></li>
+                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Commons</a></li>
+                            <li><a href="rareepic.html">Buy Rare and Epics</a></li>
                             <li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
@@ -50,9 +51,11 @@
 						<div class="inner">
 							<header>
 								<h1>AI generated Artwork as NFT on the <a href="https://cardano.org/">Cardano</a> Blockchain.</h1>
-								<p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. <br> Our very first drop is now available at <a href="https://CNFT.io/">CNFT.io</a>.</p>
+								<p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. <br><strong>Rare and Epic Tier will be available from Sept. 3rd, 18.00 UTC</strong> <br><br><a href="rareepic.html" class="button primary small">Mint Rare/Epic</a></p>
 							</header>
-							<section class="tiles">
+                            <h2>Common Tier of Batch #1</h2>
+                            <p>Common Tier NFTs now available at <a href="https://CNFT.io/">CNFT.io</a>.</p>
+                            <section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/Blue octopus.jpg" alt="" />
@@ -266,10 +269,10 @@
 									<span class="image">
 										<img src="images/Mountain tops.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=37sYJucm8aeftwNXQjAj">
+									<a>
 										<h2>Mountain Tops</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -310,10 +313,10 @@
 									<span class="image">
 										<img src="images/Orange Windows.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=gvC9OBTlaRqvBDoy1Kid">
+									<a>
 										<h2>Orange Windows</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -420,10 +423,10 @@
 									<span class="image">
 										<img src="images/Writing a letter.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=cL1bF3SqIZFzRiLlkQtl">
+									<a>
 										<h2>Writing A Letter</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
