--- a/policies.html
+++ b/policies.html
@@ -43,7 +43,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Now</a></li>
+                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Commons</a></li>
+                            <li><a href="rareepic.html">Buy Rare and Epics</a></li>
                             <li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
@@ -53,7 +54,10 @@
 						<div class="inner">
 							<h1>Policies</h1>
 							<span class="image main"><img src="images/Gallery.jpg" alt="" /></span>
-							<p>10169965f7cb96d1cd4ac669bd9fa2fd9c630f839a58670e82fcd05a<br>
+                            <h2>Rare and Epic Tier</h2>
+                            <p>Coming soon!</p>
+                            <h2>Common Tier</h2>
+                            <p>10169965f7cb96d1cd4ac669bd9fa2fd9c630f839a58670e82fcd05a<br>
 							16a95449818ceecfb31ea36efd98537f95063c1d7772af33d54e4acc<br>
 							1db5d4db2b30a97b4322a358ed03cec5673aa46b775d3e126048aaf9<br>
                             7ba6cae88289708831a8187ad8a16722085e14dd0d0ea981f2f46e4f<br>
