--- a/rareepic.html
+++ b/rareepic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About</title>
+		<title>ArtGallery_AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				 <!-- Header -->
+				<!-- Header -->
 					<header id="header">
 						<div class="inner">
 
@@ -39,40 +39,25 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Commons</a></li>
-                            <li><a href="rareepic.html">Buy Rare and Epics</a></li>
-							<li><a href="policies.html">Policies</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="policies.html">Policies</a></li>
+                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Commons</a></li>
+                            <li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>About</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<h2>About ArtGallery_AI</h2>
-                            <p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
-                            <h2>What are GANs?</h2>
-                            <p>GANs are a class of machine learning frameworks designed by Ian Goodfellow and his colleagues in 2014. Two neural networks contest with each other in a game (in the form of a zero-sum game, where one agent's gain is another agent's loss). Given a training set, this technique learns to generate new data with the same statistics as the training set. For example, a GAN trained on abstract art can generate new paintings of abstract art that look at least superficially authentic to human observers, having many realistic characteristics. </p>
-
-                            <h2>How many NFTs are available</h2>
-                            <p>Batch #1 has 50 unique NFTs: <br>
-Common: Minted 35 times | 18 available <br>
-Rare: 10 available to mint starting Sept. 3rd, 18.00 UTC <br>
-Epic: 5 available to mint starting Sept. 3rd, 18.00 UTC </p>
-                            <p>Batch #2 has ??? unique NFTs: <br>
-Common: ?? available to mint starting Sept. ??, ?? UTC <br>
-Rare: ?? available to mint starting Sept. ??, ?? UTC <br>
-Epic: ?? available to mint starting Sept. ??, ?? UTC </p>
-                            <h2>Batch #2</h2>
-                            <p>Batch #2 will be released in the next few weeks. Every early bird (holders of min. 1 NFT from Batch #1) has the chance to win a NFT of the upcoming batch. Get your "ticket" now!</p>
+							<header>
+								<h1>Rare and Epic drop - Sept. 3rd, 18.00 UTC</h1>
+								<p>Come back soon!</p>
+							</header>
 						</div>
 					</div>
 
-
 				<!-- Footer -->
-					<footer id="footer">
+                <footer id="footer">
 						<div class="inner">
 							<section>
 								<ul>
@@ -100,6 +85,9 @@ Epic: ?? available to mint starting Sept. ??, ?? UTC </p>
 							</ul>
 						</div>
 					</footer>
+
+
+
 
 			</div>
 
