--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 						<div class="inner">
 							<header>
 								<h1>AI generated Artwork as NFT on the <a href="https://cardano.org/">Cardano</a> Blockchain.</h1>
-								<p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. </p>
+                                <p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. </p>
+                                <span class="image main"><img src="images/Gallery.jpg" alt="" /></span>
 							</header>
                                 <h2>Rare and Epic Tier of Batch #1</h2>
                                 <p><strong>Rare and Epic Tier will be available from Sept. 3rd, 18.00 UTC</strong> <br><br><a href="rareepic.html" class="button primary small">Mint Rare/Epic</a></p>
@@ -128,10 +129,10 @@
 									<span class="image">
 										<img src="images/Blue Blob.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=QoyfbM52eKCSyG2R3R4a">
+									<a href="https://tokhun.io/marketplace/G76xV8">
 										<h2>Blue Blob</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -150,10 +151,10 @@
 									<span class="image">
 										<img src="images/Broken Doors.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=8msmfVStbnokVQh8znRE">
+									<a href="https://tokhun.io/marketplace/VyOrVW">
 										<h2>Broken Doors</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -161,10 +162,10 @@
 									<span class="image">
 										<img src="images/Cancerous brownie.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=v6JXdrvJPq7lAKPmQphb">
+									<a href="https://tokhun.io/marketplace/Rr6nVK">
 										<h2>Cancerous Brownie</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -172,10 +173,10 @@
 									<span class="image">
 										<img src="images/Cracks in the wall.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=Z7NuztzQcYdU28P18Rh2">
+									<a href="https://tokhun.io/marketplace/Ll9DVA">
 										<h2>Cracks In The Wall</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -183,10 +184,10 @@
 									<span class="image">
 										<img src="images/cubed orange.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=SlJHWm35fAC73b1dcAXU">
+									<a href="https://tokhun.io/marketplace/yOP5vP">
 										<h2>Cubed Orange</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -194,10 +195,10 @@
 									<span class="image">
 										<img src="images/Desert.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=M7x6HC192dqcBRYIydVx">
+									<a href="https://tokhun.io/marketplace/zNp5wm">
 										<h2>Desert</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -216,10 +217,10 @@
 									<span class="image">
 										<img src="images/Evolution of Avocado.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=uu9DaOLRKe1nMjGd0Baw">
+									<a href="https://tokhun.io/marketplace/Nnkj6p">
 										<h2>Evolution Of An Avocado</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -227,10 +228,10 @@
 									<span class="image">
 										<img src="images/Granite.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=hKCvHGUsdLZhIaqiBDNX">
+									<a href="https://tokhun.io/marketplace/QqWm8L">
 										<h2>Granite</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -249,10 +250,10 @@
 									<span class="image">
 										<img src="images/Teachers bag.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=94MEvarBKwvpCwmqO4zY">
+									<a href="https://tokhun.io/marketplace/lVYLgg">
 										<h2>Teacher Bag</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -282,10 +283,10 @@
 									<span class="image">
 										<img src="images/Nothing to see here.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=RVAcMmt3mdZi4o78jETA">
+									<a href="https://tokhun.io/marketplace/PpNlVW">
 										<h2>Nothing To See Here</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -293,10 +294,10 @@
 									<span class="image">
 										<img src="images/Nuggets.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=UJyk0Zv7dSIjLwUM963s">
+									<a href="https://tokhun.io/marketplace/Jj6A9P">
 										<h2>Nuggets</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -304,10 +305,10 @@
 									<span class="image">
 										<img src="images/Pear on Shelf.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=x4GQu52iNVDSGL6CfkTF">
+									<a>
 										<h2>Pear On Shelf</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -326,10 +327,10 @@
 									<span class="image">
 										<img src="images/Pool.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=LH2ilmSGQKM06GAGoxCT">
+									<a href="https://tokhun.io/marketplace/gVJKEG">
 										<h2>Pool</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -337,10 +338,10 @@
 									<span class="image">
 										<img src="images/Red Eyes.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=rFA5Cf9J4Zy2c4DJS6vG">
+									<a href="https://tokhun.io/marketplace/w8p5wM">
 										<h2>Red Eyes</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -359,10 +360,10 @@
 									<span class="image">
 										<img src="images/Stripes no stars.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=jHYqO8ZvuInyQfDW9yIr">
+									<a href="https://tokhun.io/marketplace/kVRKLN">
 										<h2>Stripes, No Stars</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -370,10 +371,10 @@
 									<span class="image">
 										<img src="images/Red Egg.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=ffBPAxRh9V5pCTSiLRVh">
+									<a href="https://tokhun.io/marketplace/OoYk0L">
 										<h2>Red Egg</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -381,10 +382,10 @@
 									<span class="image">
 										<img src="images/Stacked Pots.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=Pkx0HwDFg9hNIPjRyoQO">
+									<a href="https://tokhun.io/marketplace/jVRMKP">
 										<h2>Stacked Pots</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
@@ -392,10 +393,10 @@
 									<span class="image">
 										<img src="images/Rose foam.jpg" alt="" />
 									</span>
-									<a href="https://cnft.io/token.php?id=fcQL24BxvHYpDU9DJsda">
+									<a href="https://tokhun.io/marketplace/Mm8gV5">
 										<h2>Rosé Foam</h2>
 										<div class="content">
-											<p>Status: available on CNFT.io</p>
+											<p>Status: available on Tokhun.io</p>
 										</div>
 									</a>
 								</article>
