--- a/rareepic.html
+++ b/rareepic.html
@@ -50,12 +50,29 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Rare and Epic drop - Sept. 3rd, 18.00 UTC</h1>
-								<p>Come back soon!</p>
-							</header>
+
+                            <h1>Rare and Epic drop - Available now!</h1>
+                               <h2>Get one before it's too late!</h2>
+                                <p>You can get yours sending the exact amount required (30 ADA) and the wallet address given.
+Once your ADA has been received a random painting will be minted and sent to you within 10 minutes along with a little ADA.
+We use easycnft.art to process the exchange, the same reliable service many other established CNFT collections use too.</p>
+                                    <br>
+                                <div id="buy">
+                        <div class="inner">
+                    <section><p id="p1"><strong>addr1v8fnwufuzzv4uus4n68wdxkle3t03yx7njcdw7pmydmts0gnwjs2t</strong></p>
+                    <a onclick="copyToClipboard('#p1')" class="button icon solid fa-copy">Copy Address</a>
+                    </section>
+                    <section><p style="float: left">Buy now for</p><p id="p2" style="float: left">&nbsp;30</p><p>&nbsp;₳</p>
+                    <a onclick="copyToClipboard('#p2')" class="button icon solid fa-copy">Copy Amount</a>
+                                        </section>
 						</div>
 					</div>
 
+                            </header>
+						</div>
+
+
+                </div>
 				<!-- Footer -->
                 <footer id="footer">
 						<div class="inner">
