--- a/about.html
+++ b/about.html
@@ -40,8 +40,6 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Commons</a></li>
-                            <li><a href="rareepic.html">Buy Rare and Epics</a></li>
 							<li><a href="policies.html">Policies</a></li>
 						</ul>
 					</nav>
@@ -58,9 +56,10 @@
 
                             <h2>How many NFTs are available</h2>
                             <p>Batch #1 has 50 unique NFTs: <br>
-Common: Minted 35 times | 18 available <br>
-Rare: 10 available to mint starting Sept. 3rd, 18.00 UTC <br>
-Epic: 5 available to mint starting Sept. 3rd, 18.00 UTC </p>
+                                    SOLD OUT!<br>
+Common: Minted 35 times  <br>
+Rare (Golden Frame): 10  <br>
+Epic (Black Frame): 5  </p>
                             <p>Batch #2 has ??? unique NFTs: <br>
 Common: ?? available to mint starting Sept. ??, ?? UTC <br>
 Rare: ?? available to mint starting Sept. ??, ?? UTC <br>
