--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="policies.html">Policies</a></li>
-                            <li><a href="https://cnft.io/marketplace.php?search=ArtGallery_AI">Buy Commons</a></li>
-                            <li><a href="rareepic.html">Buy Rare and Epics</a></li>
                             <li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
@@ -54,10 +52,14 @@
                                 <p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. </p>
                                 <span class="image main"><img src="images/Gallery.jpg" alt="" /></span>
 							</header>
-                                <h2>Rare and Epic Tier of Batch #1</h2>
-                                <p><strong>Rare and Epic Tier will be available from Sept. 3rd, 18.00 UTC</strong> <br><br><a href="rareepic.html" class="button primary small">Mint Rare/Epic</a></p>
+                             <h2>Batch #2 coming soon - stay tuned</h2>
+
+                            <h2>Rare and Epic Tier of Batch #1</h2>
+                                <p>SOLD OUT</p>
                                 <h2>Common Tier of Batch #1</h2>
-                                <p>Common Tier NFTs now available at <a href="https://tokhun.io/marketplace?project%5B%5D=33&minPrice=&maxPrice=&sortBy=Newest+First&page=1">Tokhun.io</a>.</p>
+                                <p>SOLD OUT</p>
+
+
                             <section class="tiles">
 								<article class="style1">
 									<span class="image">
